tests/ui/traits/next-solver/global-cache-and-parallel-frontend.stderr
error[E0277]: the trait bound `T: Clone` is not satisfied
  --> $DIR/global-cache-and-parallel-frontend.rs:15:17
   |
LL | #[derive(Clone, Eq)]
   |                 ^^ the trait `Clone` is not implemented for `T`
   |
note: required for `Struct<T>` to implement `PartialEq`
  --> $DIR/global-cache-and-parallel-frontend.rs:18:19
   |
LL | impl<T: Clone, U> PartialEq<U> for Struct<T>
   |         -----     ^^^^^^^^^^^^     ^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `Eq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
help: consider restricting type parameter `T` with trait `Clone`
   |
LL | pub struct Struct<T: std::clone::Clone>(T);
   |                    +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
